--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amogha</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+
+    <!-- ✅ Update the Title -->
+    <title>AMOGHA</title>
+
+    <!-- ✅ Add Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://res.cloudinary.com/dirtmiqzt/image/upload/v1754023294/IMG_20250801_101013_ypqkdz.png"
+    />
+
+    <!-- ✅ Cleaned up Description and Author -->
+    <meta name="description" content="Official Website for AMOGHA 2K25 - Tech Fest of RGMCET (AI & ML)" />
+    <meta name="author" content="RGMCET AI & ML Department" />
+
+    <!-- ✅ Open Graph Meta -->
+    <meta property="og:title" content="AMOGHA 2K25" />
+    <meta property="og:description" content="Join us at AMOGHA 2K25 - Celebrate Technology, Innovation & AI!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://res.cloudinary.com/dirtmiqzt/image/upload/v1753934249/Amogha_Logo_awwxbu.png" />
+
+    <!-- ✅ Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@rgmcet_ai_ml" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/dirtmiqzt/image/upload/v1753934249/Amogha_Logo_awwxbu.png" />
   </head>
 
   <body>
